<resources>
    <string name="app_name">ListaMascotas</string>
    <string name="contacto">Contacto</string>
    <string name="acerca_de">Acerca de</string>
    <string name="txt_acerca_de">Desarrolló Leonel Castañeda Alvarez para el curso de Android.</string>
    <string name="txt_form_contacto">Formulario Contacto</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="correo">Correo Electónico</string>
    <string name="mensaje">Mensaje</string>
    <string name="enviar">Enviar Comentarios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
